[package]
name = "quantum_wallet_backend"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
warp = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
aes-gcm = "0.10"
hex = "0.4"
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4"] }
